added db connections

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-daily-exp></app-daily-exp>
+<button mat-button (click)="OpenPopup()">Add Exepnse</button>
+<div class="dailyExpensePopup">
+    <app-daily-exp></app-daily-exp>
+</div>
 <router-outlet></router-outlet>
