--- a/client/src/app/daily-exp/daily-exp.component.html
+++ b/client/src/app/daily-exp/daily-exp.component.html
@@ -1,42 +1,33 @@
-<form [formGroup]="dailyExpForm">
+<form [formGroup]="dailyExpForm" (ngSubmit)="onSubmit()" #dailyForm="ngForm">
 
-    <mat-form-field appearance="outline" width="100px">
+    <mat-form-field appearance="outline" class="md-5">
         <mat-label>Expense Date</mat-label>
-        <input matInput [matDatepicker]="picker">
+        <input matInput [matDatepicker]="picker" formControlName="expenseDate">
         <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
 
-    <mat-form-field appearance="outline" class="field-space">
+    <mat-form-field appearance="outline" class="md-5">
         <mat-label>Expense Amount</mat-label>
-        <input matInput placeholder="Amount" required>
+        <input type="number" matInput placeholder="Amount" required formControlName="expenseAmount">
     </mat-form-field>
 
-
-
     <mat-form-field appearance="outline" class="field-space">
-        <mat-select required>
-            <mat-option *ngFor="let category of expenseCategory" value="category">{{category}}</mat-option>
+        <mat-select formControlName="expenseCategory" required (change)="changeCategory($event)">
+            <mat-option *ngFor="let category of expenseCategories" [value]="category">{{category}}</mat-option>
         </mat-select>
         <mat-label>Category</mat-label>
     </mat-form-field>
 
-    <mat-form-field appearance="outline" class="field-space">
-        <input matInput placeholder="Simple placeholder">
+    <mat-form-field appearance="outline" class="md-5">
+        <input matInput placeholder="Simple placeholder" formControlName="expenseNote">
         <mat-label>Note</mat-label>
     </mat-form-field>
-    <button mat-stroked-button color="primary" type="submit" [disabled]="!dailyExpForm.valid">Add</button>
+    <button mat-stroked-button color="primary" type="submit"
+        [disabled]="!dailyExpForm.valid || isFormSubmitted">Add</button>
 </form>
 
-<!-- {{dailyExpForm | json}} -->
-
-<!-- <form [formGroup]="profileForm">
-
-    <label for="first-name">First Name: </label>
-    <input id="first-name" type="text" formControlName="firstName">
-
-    <label for="last-name">Last Name: </label>
-    <input id="last-name" type="text" formControlName="lastName">
-
-    <button type="submit" [disabled]="!profileForm.valid">Submit</button>
-</form> -->
+<!-- {{dailyExpForm.value | json}}
+{{dailyExpForm.status | json}} -->
+<hr />
+<app-view-daily-exp [list]="expenesesList"></app-view-daily-exp>
