--- a/client/src/app/view-daily-exp/view-daily-exp.component.html
+++ b/client/src/app/view-daily-exp/view-daily-exp.component.html
@@ -3,19 +3,16 @@
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
-
     <ng-container matColumnDef="Note">
         <th mat-header-cell *matHeaderCellDef> Note </th>
         <td mat-cell *matCellDef="let element"> {{element.expenseNote}} </td>
     </ng-container>
 
-    <!-- Position Column -->
     <ng-container matColumnDef="Date">
         <th mat-header-cell *matHeaderCellDef> Date </th>
         <td mat-cell *matCellDef="let element"> {{element.expenseDate}} </td>
     </ng-container>
 
-    <!-- Name Column -->
     <ng-container matColumnDef="Amount">
         <th mat-header-cell *matHeaderCellDef> Amount </th>
         <!-- [ngClass]="[isSelected ? 'selected' : 'unselected']"> -->
@@ -23,14 +20,15 @@
             {{element.expenseAmount | currency:'INR':'symbol'}}</td>
     </ng-container>
 
-    <!-- Weight Column -->
     <ng-container matColumnDef="Category">
         <th mat-header-cell *matHeaderCellDef> Category </th>
         <td mat-cell *matCellDef="let element"> {{element.expenseCategory}} </td>
     </ng-container>
 
-    <!-- Symbol Column -->
-
+    <!-- <ng-container matColumnDef="Action">
+        <th mat-header-cell *matHeaderCellDef> Action </th>
+        <td mat-cell> <button mat-button> delete </button> </td>
+      </ng-container> -->
 
     <tr mat-header-row *matHeaderRowDef="expenseColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: expenseColumns;">{{row}}</tr>
